--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+/*
 $color: #2194E0;
 
 @keyframes sheen {
@@ -16,7 +18,10 @@ $color: #2194E0;
   left: 50%;
   transform: translate(-50%, -50%);
 }
+*/
 .button {
+  background-color: blue;
+  /*
   padding: 0.75em 2em;
   text-align: center;
   text-decoration: none;
@@ -49,4 +54,5 @@ $color: #2194E0;
      transition: all 0.5s ease-in-out;
     }
   }
+  */
 }
