--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-/*
+
 $color: #2194E0;
 
 @keyframes sheen {
@@ -10,7 +10,7 @@ $color: #2194E0;
     transform: skewY(-45deg) translateX(12.5em);
   }
 }
-*/
+
 .wrapper {
   display: block;
   position: absolute;
@@ -20,7 +20,7 @@ $color: #2194E0;
 }
 
 .button {
-  background-color: blue;
+  background-color: red;
   /*
   padding: 0.75em 2em;
   text-align: center;
