--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,9 @@
+/*
 html,body{
   height:100%;
 }
 body{
-  /*color*/
-  background:#1AAB8A;
+
   text-align:center;
 }
 body:before{
@@ -48,4 +48,9 @@ button:hover:before,button:hover:after{
   width:100%;
   transition:800ms ease all;
 }
+*/
 
+body{
+
+  background-color: blue;
+}
