--- a/style.css
+++ b/style.css
@@ -48,3 +48,9 @@ button:hover:before,button:hover:after{
   width:100%;
   transition:800ms ease all;
 }
+
+.buttons {
+    background:#fff;
+  color:#1AAB8A;
+  
+}
