--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ button:hover:before,button:hover:after{
 }
 
 .buttons {
-    background:#fff;
-  color:#1AAB8A;
+    background:#1AAB8A;
+  color:#fff;
   
 }
