--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@ button:hover:before,button:hover:after{
 }
 
 .buttons {
-    background:#1AAB8A;
+  background:#1AAB8A;
   color:#fff;
+  border:none;
   
 }
