--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 body:before{
   content:'';
   height:100%;
-  display:inline-block;
+  /* display:inline-block; */
   /* vertical-align:middle; */
 }
 button{
