change btn to titl

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ button:hover:before,button:hover:after{
   transition:800ms ease all;
 }
 
-.buttons {
+.titl {
   background:#1AAB8A;
   color:#fff;
   border:none;
