--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ header{
   display: inline-block;
   background-color: white;
   height: 60px;
+  width: 80%;
 }
 button{
   background:#1AAB8A;
@@ -59,7 +60,7 @@ button:hover:before,button:hover:after{
   background-color:#fff;
   border:none;
   position:relative;
-  padding:3px 3px;
+  /* padding:3px 3px; */
   display: inline;
 
   
