--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body:before{
   /* vertical-align:middle; */
 }
 header{
+  top: 30px;
+  left 30px;
   display: inline-block;
   background-color: white;
   height: 60px;
