margin of header

--- a/style.css
+++ b/style.css
@@ -14,12 +14,13 @@ body:before{
   /* vertical-align:middle; */
 }
 header{
-  top: 40px;
-  left: 40px;
+  /* top: 40px; */
+  /* left: 40px; */
   display: inline-block;
   background-color: white;
   height: 60px;
   width: 80%;
+  margin: 40px;
 }
 button{
   background:#1AAB8A;
