--- a/style.css
+++ b/style.css
@@ -74,3 +74,8 @@ button:hover:before,button:hover:after{
   display: block;
   margin: 0 25px;
   overflow-wrap: break-word;
+}
+.hbtn{
+ float: right; 
+}
+  
