borders and background

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html,body{
   height:100%;
 }
 body{
-  background-color: #C0C0C0;
+  background-color: #D3D3D3;
 
   /* text-align:center; */
 }
@@ -21,6 +21,7 @@ header{
   height: 60px;
   width: 85%;
   margin: 25px;
+  border: 1px solid #C0C0C0;
 }
 button{
   background:#1AAB8A;
